--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Successity</title>
-    <script
-      src="https://kit.fontawesome.com/9b6d0380de.js"
-      crossorigin="anonymous"
-    ></script>
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Web site created using create-react-app" />
+    <link rel="icon" type="image/png" href="./OFU.png">
+    <title>OpenFreeUni</title>
   </head>
   <body>
     <div id="root"></div>
